--- a/app/src/main/res/layout/menu_especialista.xml
+++ b/app/src/main/res/layout/menu_especialista.xml
@@ -155,12 +155,13 @@
 
     <View
         android:id="@+id/rectangle4"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_below="@+id/rectangle3"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/rectangle3"/>
+        android:background="@color/white"
+        android:onClick="openCredentialsSpecialist" />
 
     <TextView
         android:id="@+id/Nombre4"
@@ -168,7 +169,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
         android:layout_marginTop="50dp"
-        android:text="@string/cerrar_sesion"
+        android:text="@string/menu_cambiar_contrase_a"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -180,7 +181,7 @@
         android:layout_height="24dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/logout"
+        android:src="@drawable/ic_rut"
         android:layout_below="@+id/ico_user3"
         android:contentDescription="@string/cerrar_sesion" />
 
@@ -193,6 +194,45 @@
         android:src="@drawable/flecha_desplegable"
         android:layout_below="@+id/despliege3"
         android:contentDescription="@string/despliege" />
+
+    <View
+        android:id="@+id/rectangle5"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/rectangle4"/>
+
+    <TextView
+        android:id="@+id/Nombre5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/cerrar_sesion"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/Nombre4"/>
+
+    <ImageView
+        android:id="@+id/ico_user6"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logout"
+        android:layout_below="@+id/ico_user4" />
+
+    <ImageView
+        android:id="@+id/despliege5"
+        android:layout_width="20dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/flecha_desplegable"
+        android:layout_below="@+id/despliege4" />
 
 
 </RelativeLayout>
