--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -45,19 +45,20 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imagen"
+                android:id="@+id/imgPerfilEspecialista"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_marginTop="30dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/image_perfil"
+                android:scaleType="fitXY"
                 app:shapeAppearanceOverlay="@style/radius4"/>
 
             <LinearLayout
                 android:id="@+id/LLbtnsimagen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/imagen"
+                android:layout_below="@id/imgPerfilEspecialista"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:orientation="horizontal">
@@ -95,19 +96,27 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Nombre y Apellido"
+                    android:text="@string/nombre_y_apellido"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="25dp"/>
 
-                <EditText
-                    android:id="@+id/edNombre"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/nombre_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/logo_persona">
+
+                    <EditText
+                        android:id="@+id/edNombre"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtRut"
@@ -117,20 +126,28 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Rut"
+                    android:text="@string/rut"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edRut"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/rut_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_rut">
+
+                    <EditText
+                        android:id="@+id/edRut"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtCorreo"
@@ -140,18 +157,21 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Correo Electrónico"
+                    android:text="@string/correo_electr_nico"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"/>
 
-                <EditText
+                <TextView
                     android:id="@+id/edCorreo"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
+                    android:drawableStart="@drawable/ic_email"
+                    android:drawableTint="@color/gris"
                     android:background="@drawable/image_rectangle1"
+                    android:paddingStart="10dp"
                     />
 
                 <TextView
@@ -162,20 +182,28 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Teléfono"
+                    android:text="@string/tel_fono"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edTelefono"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/telefono_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_phone2">
+
+                    <EditText
+                        android:id="@+id/edTelefono"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/TxtEspecialidad"
@@ -185,44 +213,29 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Profesión/Especialidad"
+                    android:text="@string/profesi_n_especialidad"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edEspecialidad"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/especialidad_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textEmailAddress"
-                    android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
-
-                <TextView
-                    android:id="@+id/txtCambiarContraseña"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="-0.5dp"
-                    android:layout_gravity="top"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Contraseña"
-                    android:textColor="#FF000000"
-                    android:textSize="20sp"
-                    android:layout_marginStart="30dp"
-                    />
-
-                <EditText
-                    android:id="@+id/edNuevaContraseña"
-                    android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/logo_inge">
+
+                    <EditText
+                        android:id="@+id/edEspecialidad"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
 
                 <Button
                     android:id="@+id/btnGuardarPerfilEspecialista"
@@ -231,7 +244,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="100dp"
-                    android:text="Guardar Cambios"
+                    android:text="@string/guardar_cambios"
                     android:textSize="20sp"
                     />
 
@@ -240,13 +253,5 @@
         </RelativeLayout>
 
     </ScrollView>
-
-    <!-- Barra de navegación -->
-    <include
-        layout="@layout/navbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
-
 
 </RelativeLayout>
