--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -44,6 +44,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/image_perfil"
+                android:scaleType="fitXY"
                 app:shapeAppearanceOverlay="@style/radius4"/>
 
             <LinearLayout
@@ -93,14 +94,22 @@
                     android:textSize="20sp"
                     android:layout_marginStart="25dp"/>
 
-                <EditText
-                    android:id="@+id/edNombre_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/nombre_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/logo_persona">
+
+                    <EditText
+                        android:id="@+id/edNombre_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtRut"
@@ -115,14 +124,22 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edRut_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/rut_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_rut">
+
+                    <EditText
+                        android:id="@+id/edRut_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtCorreo"
@@ -136,14 +153,22 @@
                     android:textSize="20sp"
                     android:layout_marginStart="30dp"/>
 
-                <EditText
-                    android:id="@+id/edCorreo_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/email_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_email">
+
+                    <EditText
+                        android:id="@+id/edCorreo_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtTelefono"
@@ -158,14 +183,23 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edTelefono_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/telefono_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_phone2">
+
+                    <EditText
+                        android:id="@+id/edTelefono_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
 
                 <TextView
                     android:id="@+id/TxtEspecialidad"
@@ -178,15 +212,22 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edEspecialidad"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/especialidad_especialista_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textEmailAddress"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/logo_inge">
+
+                    <EditText
+                        android:id="@+id/edEspecialidad"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtContraseña"
@@ -202,14 +243,24 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edContraseña_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_register_specialist_layout"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_pass"
+                    app:endIconMode="password_toggle">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edContraseña_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:inputType="textPassword"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtConfirmaContraseña"
@@ -225,14 +276,24 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <EditText
-                    android:id="@+id/edConfirmaContraseña_especialista"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_register_specialist_layout2"
                     android:layout_width="347dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/image_rectangle1"
-                    />
+                    app:startIconDrawable="@drawable/ic_pass"
+                    app:endIconMode="password_toggle">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edConfirmaContraseña_especialista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="10dp"
+                        android:inputType="textPassword"
+                        android:background="@drawable/image_rectangle1"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/txtCertificado"
