--- a/app/src/main/res/layout/ver_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_servicios_especialista.xml
@@ -32,6 +32,7 @@
 
     <!-- Contenido -->
     <ScrollView
+        android:id="@+id/scrollv_servicios_especialista"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"
@@ -80,7 +81,7 @@
                 android:layout_width="180dp"
                 android:layout_height="25dp"
                 android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_below="@+id/txt_nombreservicio"
+                android:layout_below="@id/txt_nombreservicio"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -94,7 +95,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/nombreservicio"
+                android:layout_below="@id/nombreservicio"
                 android:layout_toEndOf="@id/imagen_servicio"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="3dp"
@@ -104,7 +105,7 @@
                 android:layout_width="180dp"
                 android:layout_height="80dp"
                 android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_below="@+id/txt_descripcion"
+                android:layout_below="@id/txt_descripcion"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -118,7 +119,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/descripcionservicio"
+                android:layout_below="@id/descripcionservicio"
                 android:layout_toEndOf="@id/imagen_servicio"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
@@ -128,7 +129,7 @@
                 android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_toEndOf="@id/txt_precioservicio"
-                android:layout_below="@+id/descripcionservicio"
+                android:layout_below="@id/descripcionservicio"
                 android:layout_marginTop="6dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -177,7 +178,7 @@
                 android:layout_width="180dp"
                 android:layout_height="25dp"
                 android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_below="@+id/txt_nombreservicio2"
+                android:layout_below="@id/txt_nombreservicio2"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -191,7 +192,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/nombreservicio2"
+                android:layout_below="@id/nombreservicio2"
                 android:layout_toEndOf="@id/imagen_servicio2"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="3dp"
@@ -201,7 +202,7 @@
                 android:layout_width="180dp"
                 android:layout_height="80dp"
                 android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_below="@+id/txt_descripcion2"
+                android:layout_below="@id/txt_descripcion2"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -215,7 +216,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/descripcionservicio2"
+                android:layout_below="@id/descripcionservicio2"
                 android:layout_toEndOf="@id/imagen_servicio2"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
@@ -225,7 +226,7 @@
                 android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_toEndOf="@id/txt_precioservicio2"
-                android:layout_below="@+id/descripcionservicio2"
+                android:layout_below="@id/descripcionservicio2"
                 android:layout_marginTop="6dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -274,7 +275,7 @@
                 android:layout_width="180dp"
                 android:layout_height="25dp"
                 android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_below="@+id/txt_nombreservicio3"
+                android:layout_below="@id/txt_nombreservicio3"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -288,7 +289,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/nombreservicio3"
+                android:layout_below="@id/nombreservicio3"
                 android:layout_toEndOf="@id/imagen_servicio3"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="3dp"
@@ -298,7 +299,7 @@
                 android:layout_width="180dp"
                 android:layout_height="80dp"
                 android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_below="@+id/txt_descripcion3"
+                android:layout_below="@id/txt_descripcion3"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -312,7 +313,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_below="@+id/descripcionservicio3"
+                android:layout_below="@id/descripcionservicio3"
                 android:layout_toEndOf="@id/imagen_servicio3"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
@@ -322,7 +323,7 @@
                 android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_toEndOf="@id/txt_precioservicio3"
-                android:layout_below="@+id/descripcionservicio3"
+                android:layout_below="@id/descripcionservicio3"
                 android:layout_marginTop="6dp"
                 android:layout_marginStart="10dp"
                 android:background="@color/color_servicio2"
@@ -336,22 +337,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="119dp"
         android:layout_marginEnd="119dp"
-        android:layout_above="@+id/bottomNavigationView"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
         android:text="@string/btn_ver_perfil_especialista"
         android:textSize="25sp" />
-
-    <!-- NavBar -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/header"
-        app:itemTextColor="@color/white"
-        app:itemIconTint="@color/item_white_menu"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_menu"
-        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
