--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/drawable_shape"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MenuSpecialist" >
+    >
 
     <TextView
         android:id="@+id/menu_especialista"
@@ -202,7 +201,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/rectangle4"/>
+        android:layout_below="@+id/rectangle4"
+        />
 
     <TextView
         android:id="@+id/Nombre5"
