--- a/app/src/main/res/layout/nav_bar.xml
+++ b/app/src/main/res/layout/nav_bar.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Home">
+    android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/framelayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
+        />
 
+    <!-- NavBar -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
@@ -20,9 +20,7 @@
         android:background="@color/header"
         app:itemTextColor="@color/white"
         app:itemIconTint="@color/item_white_menu"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_menu"
-        android:layout_gravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
