--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/drawable_shape"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ProfileSpecialist"
+    tools:context=".Specialist.ProfileSpecialist"
     >
 
     <TextView
